# protohackers

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  rust-toolchain.toml
src/: error.rs  main.rs  problem0.rs  problem1.rs  problem2.rs  problem3.rs  util.rs
src/problems/: mod.rs  problem0.rs  problem1.rs  problem2.rs  problem3.rs  problem4.rs  problem5.rs
src/problems/problem6/: decode.rs  encode.rs  mod.rs
