[package]
edition = "2021"
name = "lucaspickering-protohackers"
version = "0.1.0"

[[bin]]
name = "protohackers"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1.0.65", features = ["backtrace"]}
async-trait = "0.1.57"
clap = {version = "3.2.20", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
rusqlite = {version = "0.28.0", features = ["bundled"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = {version = "1.21.0", features = ["io-util", "macros", "net", "rt"]}
